Set a fix size for the container and align it to the center of the page

--- a/styles.css
+++ b/styles.css
@@ -2,16 +2,19 @@ body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .container {
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
+  width: 800px;
+  border: 2px solid black;
 }
 
 .cell {
-  width: 115px;
-  height: 115px;
+  width: 50px;
+  height: 50px;
 }
